--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "nodemonConfig": {
     "watch": [
-      "src"
+      "./"
     ],
     "ext": "ts, json",
     "exec": "tsx src/index.ts"
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.1.0",
+    "tsc-watch": "^6.0.4",
     "tsx": "^4.7.1"
   },
   "dependencies": {
