--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon",
     "build": "tsc --build",
     "start": "node dist/index.js",
-    "setup": "npm i && npm run build && pm2 stop portofolio-db && pm2 start --name portofolio-db npm -- start --update-env --time && pm2 save",
+    "setup": "npm i && npm run build && pm2 start --name portofolio-db npm -- start --update-env --time && pm2 save",
     "deploy": "git pull --no-rebase && npm run build && pm2 restart portofolio-db --update-env --time && pm2 save"
   },
   "nodemonConfig": {
